# avidemux2

./: .gitignore  .gitmodules  MSVC_BUILD.md  SCRIPTS_MAP.md  bootStrap.sh  bootStrapCrossMingwQt6_mxe_ninja.sh  bootStrapMSVC.bat
appImage/: makeAppImage.sh  makeAppImageBookwormMinimal.sh  makeAppImageBuster.sh  makeAppImageBusterMinimal.sh
avidemux/cli/: CMakeLists.txt
avidemux/gtk/: CMakeLists.txt
avidemux/osxInstaller/: CMakeLists.txt
avidemux/qt4/: CMakeLists.txt
avidemux/qt4/cmake/: adm_win32_vs.cmake
avidemux_core/: CMakeLists.txt
avidemux_core/ADM_core/src/: ADM_crashdump_unix.cpp
avidemux_core/ADM_coreAudioParser/src/: CMakeLists.txt
avidemux_core/ADM_coreUtils/src/: CMakeLists.txt  pref_gen.py
avidemux_core/ADM_coreUtils/src/tests/: CMakeLists.txt  fourcc_unittest.cpp
avidemux_core/cmake/: admCheckOptionalLibs.cmake  admFFmpegBuild_helpers.cmake  admGetRevision.cmake  admMainChecks.cmake
avidemux_plugins/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_ac3/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_alaw/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_amrnb/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_dca/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_faad/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_ima_adpcm/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_lav/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_mad/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_ms_adpcm/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_opencore_amrnb/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_opencore_amrwb/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_opus/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_ulaw/: CMakeLists.txt
avidemux_plugins/ADM_audioDecoders/ADM_ad_vorbis/: CMakeLists.txt
avidemux_plugins/ADM_demuxers/NativeAvisynth/: CMakeLists.txt
avidemux_plugins/ADM_muxers/muxerMplex/: dtsstrm_in.cpp
avidemux_plugins/ADM_scriptEngines/tinyPy/src/: CMakeLists.txt
avidemux_plugins/ADM_videoEncoder/: CMakeLists.txt
avidemux_plugins/ADM_videoEncoder/ffQsvAV1/: ADM_ffQsvAV1.cpp  ADM_ffQsvAV1.h  CMakeLists.txt  ffQsvAV1.conf  ffQsvAV1.h  ffQsvAV1Plugin.cpp  ffQsvAV1_desc.cpp  ffQsvAV1_json.cpp
avidemux_plugins/ADM_videoFilters6/imageStab/: CMakeLists.txt
avidemux_plugins/cmake/: admPluginsPackaging.cmake
bootStrap/: common.sh  haiku.sh  linux.sh  macos.sh  mingw.sh  win_msvc.sh
bootStrap/cmake/: ad_plugin.cmake  admCheckQt6.cmake  admCheckThreads.cmake  admConfigHelper.cmake  admFFmpegBuild_crossMingw.cmake  admFFmpegBuild_helpers.cmake  admGitUtils.cmake  admMainChecks.cmake  admPatchUtils.cmake  admYasm_vs.cmake  adm_win32_mingw_qt4.cmake  vf_plugin.cmake  vf_plugin_cli.cmake  vf_plugin_qt4.cmake
bootstrap/appImage/: deploy.sh  deployBullseyeMinimal.sh  deployBuster.sh  deployBusterMinimal.sh  makeAppImage.sh  makeAppImageBookwormMinimal.sh  makeAppImageBuster.sh  makeAppImageBusterMinimal.sh  prepare_env_bookworm.sh  prepare_env_buster.sh
bootstrap/scripts/: haiku.sh  linux.sh  macos.sh  mingw.sh  win_msvc.sh
myOwnPlugins/videoEncoder/: CMakeLists.txt
scripts/: update_license.sh
