# DCA decoder
INCLUDE(admCheckDca)
checkDca()

IF(LIBDCA_FOUND)
  INCLUDE(ad_plugin)

  SET(ADM_ad_dca_SRCS ADM_dca.cpp)

  ADM_ADD_AUDIO_DECODER_PLUGIN(ADM_ad_dca ${ADM_ad_dca_SRCS})
  TARGET_LINK_LIBRARIES(ADM_ad_dca PRIVATE ${LIBDCA_LIBRARY_DIR})

  ADD_TARGET_CFLAGS(ADM_ad_dca "-I${LIBDCA_INCLUDE_DIR}")
  ADD_TARGET_CFLAGS(ADM_ad_dca "-DUSE_LIBDCA_${LIBDCA_VERSION}")
ENDIF()
