INCLUDE(admCheckOpus)
checkOpusDec()

IF(LIBOPUS_FOUND)
  INCLUDE(ad_plugin)

  SET(ADM_ad_opus_SRCS ADM_opus.cpp)

  ADM_ADD_AUDIO_DECODER_PLUGIN(ADM_ad_opus ${ADM_ad_opus_SRCS})
  TARGET_LINK_LIBRARIES(ADM_ad_opus PRIVATE ${LIBOPUS_LIBRARY_DIR})

  ADD_TARGET_CFLAGS(ADM_ad_opus "-I${LIBOPUS_INCLUDE_DIR}")
ENDIF()
